implemented calibration to SbW

--- a/ThrottleByWire/ThrottleByWireC6/Debug/makefile
+++ b/ThrottleByWire/ThrottleByWireC6/Debug/makefile
@@ -84,8 +84,8 @@ all: main-build
 main-build: ThrottleByWireC6.elf secondary-outputs
 
 # Tool invocations
-ThrottleByWireC6.elf ThrottleByWireC6.map: $(OBJS) $(USER_OBJS) fail-specified-linker-script-missing makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-g++ -o "ThrottleByWireC6.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 --specs=nosys.specs -Wl,-Map="ThrottleByWireC6.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
+ThrottleByWireC6.elf ThrottleByWireC6.map: $(OBJS) $(USER_OBJS) C:\Users\rolan\Laravel\ Projects\Racing-Team-Rotterdam\ThrottleByWire\ThrottleByWireC6\STM32F103C6TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-g++ -o "ThrottleByWireC6.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\rolan\Laravel Projects\Racing-Team-Rotterdam\ThrottleByWire\ThrottleByWireC6\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ThrottleByWireC6.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
